Get rid of some warnings